@@ -1,5 +1,6 @@
+#define DEBUG
 /*
- * "$Id: ieee1394-linux.c,v 1.3.2.1 2002/05/24 18:15:46 mike Exp $"
+ * "$Id: ieee1394-linux.c,v 1.3.2.2 2002/05/29 16:39:16 mike Exp $"
  *
  *   Linux IEEE-1394 glue for the Common UNIX Printing System (CUPS).
  *
@@ -873,5 +874,5 @@ ieee1394_error(void)
 
 
 /*
- * End of "$Id: ieee1394-linux.c,v 1.3.2.1 2002/05/24 18:15:46 mike Exp $".
+ * End of "$Id: ieee1394-linux.c,v 1.3.2.2 2002/05/29 16:39:16 mike Exp $".
  */
